--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -75,7 +75,7 @@
                     </h4>
               </div>
               <div class="row">
-                  <h6 class="mt-3">{{ 'Login.NoAccount' | translate }}? <a href="javascript:void(0);"
+                  <h6 class="mt-3">{{ 'Login.NoAccount' | translate }}? <a href="javascript:void(0);" (click)="goTo('/public/sign-up')"
                     class="text-primary">{{ 'Login.SignUpNow' | translate }}</a></h6>
               </div>
               
@@ -105,6 +105,7 @@
                 <div class="divider row"></div>
                 <div class="d-flex align-items-center">
                   <div class="ml-auto"><a href="javascript:void(0);"
+                      (click)="goTo('/public/forgot-password')"
                       class="btn-lg btn btn-link">{{ 'Login.RecoverPassword' | translate }}</a>
                     <input type="submit" class="btn btn-primary btn-lg"
                       value="{{ 'Login.LoginToMySpace' | translate }}" />
