--- a/src/app/private/containers/visitor/containers/index/left-side/left-side.component.html
+++ b/src/app/private/containers/visitor/containers/index/left-side/left-side.component.html
@@ -34,69 +34,19 @@
         <div class="app-sidebar__inner">
             <ul class="vertical-nav-menu metismenu">
                 <li class="app-sidebar__heading">Menu</li>
-                <li class="mm-active">
-                    <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.today8')">
-                        <i class="metismenu-icon pe-7s-rocket"></i>
-                        Ajourd'hui 1
-                        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
+                <li>
+                    <a href="javascript:void(0);" (click)="compute0()"
+                        class="{{ activeMenu.menu8 == 1 ? 'mm-active': ''}}">
+                        <i class="metismenu-icon">
+                        </i>Visualiser mes documents
                     </a>
-                    <ul class="today8 mm-collapse">
-                        <li>
-                            <a href="javascript:void(0);" (click)="activeMenu.menu8=0;"
-                                class="{{ activeMenu.menu8 == 1 ? 'mm-active': ''}}">
-                                <i class="metismenu-icon">
-                                </i>...
-                            </a>
-                        </li>
-                    </ul>
                 </li>
-                <li class="mm-active">
-                    <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.today8')">
-                        <i class="metismenu-icon pe-7s-rocket"></i>
-                        Ajourd'hui 2
-                        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
+                <li>
+                    <a href="javascript:void(0);" (click)="compute1()"
+                        class="{{ activeMenu.menu8 == 1 ? 'mm-active': ''}}">
+                        <i class="metismenu-icon">
+                        </i>Mettre a jour mon profil
                     </a>
-                    <ul class="today8 mm-collapse">
-                        <li>
-                            <a href="javascript:void(0);" (click)="activeMenu.menu8=0;"
-                                class="{{ activeMenu.menu8 == 1 ? 'mm-active': ''}}">
-                                <i class="metismenu-icon">
-                                </i>...
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="mm-active">
-                    <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.today8')">
-                        <i class="metismenu-icon pe-7s-rocket"></i>
-                        Ajourd'hui 3
-                        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
-                    </a>
-                    <ul class="today8 mm-collapse">
-                        <li>
-                            <a href="javascript:void(0);" (click)="activeMenu.menu8=0;"
-                                class="{{ activeMenu.menu8 == 1 ? 'mm-active': ''}}">
-                                <i class="metismenu-icon">
-                                </i>...
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="mm-active">
-                    <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.today8')">
-                        <i class="metismenu-icon pe-7s-rocket"></i>
-                        Ajourd'hui 4
-                        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
-                    </a>
-                    <ul class="today8 mm-collapse">
-                        <li>
-                            <a href="javascript:void(0);" (click)="activeMenu.menu8=0;"
-                                class="{{ activeMenu.menu8 == 1 ? 'mm-active': ''}}">
-                                <i class="metismenu-icon">
-                                </i>...
-                            </a>
-                        </li>
-                    </ul>
                 </li>
             </ul>
         </div>
