--- a/src/app/public/containers/forgot-password/forgot-password.component.html
+++ b/src/app/public/containers/forgot-password/forgot-password.component.html
@@ -32,9 +32,33 @@
                 <div class="h-100 d-flex bg-white justify-content-center align-items-center col-md-12 col-lg-8">
                     <div class="mx-auto app-login-box col-sm-12 col-md-8 col-lg-6">
                         <div class="app-logo"></div>
+                        <!--  -->
+                        <div class="row">
+                            <div class="col-sm-6">
+            
+                            </div>
+                            <div class="col-sm-6">
+                            <div class="dropdown">
+                                <button *ngIf="currentLanguage == 'fr'" (click)="changeLanguage('en')" style="float: right" type="button" data-toggle="dropdown" class="p-0 mr-2 btn btn-link" aria-expanded="false" title="US">
+                                    <span class="icon-wrapper icon-wrapper-alt">
+                                        <span class="icon-wrapper-bg"></span>
+                                        <span class="language-icon flag large US"></span>
+                                    </span>
+                                </button>
+                                <button *ngIf="currentLanguage == 'en'" (click)="changeLanguage('fr')" style="float: right" type="button" data-toggle="dropdown" class="p-0 mr-2 btn btn-link" aria-expanded="false" title="France">
+                                    <span class="icon-wrapper icon-wrapper-alt">
+                                        <span class="icon-wrapper-bg"></span>
+                                        <span class="language-icon opacity-8 flag large FR"></span>
+                                    </span>
+                                </button>
+                            </div>
+                            </div>
+                        </div>
+                        <!-- -->
+                        
                         <h4>
-                            <div>Forgot your Password?</div>
-                            <span>Use the form below to recover it.</span></h4>
+                            <div>{{ 'Forgotpwd.Forgotpassword' | translate }}</div>
+                            <span>{{ 'Forgotpwd.Form' | translate }}</span></h4>
                         <div>
                             <form  (submit)="onSubmit()" [formGroup]="form" class="">
                                 <div class="form-row">
@@ -52,8 +76,8 @@
                                             </button>
                                         </div>
                                         <div class="position-relative form-group"><label for="exampleEmail" class="">Email</label>
-                                           <!-- <input name="email" id="exampleEmail" placeholder="Email here..." type="email" class="form-control">-->
-                                        <input formControlName="email" name="email" id="exampleEmail" placeholder="Email here..." type="email" class="form-control" 
+                                           <!-- <input name="email" id="exampleEmail" placeholder="{{ 'Forgotpwd.EmailPlaceholder' | translate }}" type="email" class="form-control">-->
+                                        <input formControlName="email" name="email" id="exampleEmail" placeholder="{{ 'Forgotpwd.EmailPlaceholder' | translate }}" type="email" class="form-control" 
                                             class="form-control {{ f.email.errors && isSubmitted ? 'invalid': '' }}">
                                         <small class="form-text text-muted info-error info-error-danger"
                                             *ngIf="handleError?.email">
@@ -64,10 +88,23 @@
                                 </div>
                                 <div class="mt-4 d-flex align-items-center">
                                     <h6 class="mb-0">
-                                        <a href="javascript:void(0);" (click)="goTo('/private/login')"class="text-primary">Sign in existing account</a>
+                                        <a href="javascript:void(0);" (click)="goTo('/private/login')"class="text-primary">{{ 'Forgotpwd.Sign-in' | translate }}</a>
                                     </h6>
-                                    <div class="ml-auto">
-                                        <button class="btn btn-primary btn-lg">Recover Password</button>
+                                    <div class="ml-auto" style="width: 70%;">
+                                      
+                                        <button [disabled]="isLoading"
+                                            class="btn-wide btn-shadow btn-hover-shine btn-pill btn-primary btn-lg"
+                                            style="width: 100%; justify-content: center; align-items: center; flex: 1;">
+                                            <p *ngIf="!isLoading" style="font-size: medium; padding: 0px; margin: 5px;">
+                                                {{ 'Forgotpwd.Recoverpwd' | translate }} </p>
+                                            <div *ngIf="isLoading" style="padding: 15px; margin-left: 50%;">
+                                                <div class="ball-scale-multiple">
+                                                    <div style="background-color: white;"></div>
+                                                    <div style="background-color: white;"></div>
+                                                    <div style="background-color: white;"></div>
+                                                </div>
+                                            </div>
+                                        </button>
                                     </div>
                                 </div>
                             </form>
