--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -78,8 +78,21 @@
                   <h6 class="mt-3">{{ 'Login.NoAccount' | translate }}? <a href="javascript:void(0);" (click)="goTo('/public/sign-up')"
                     class="text-primary">{{ 'Login.SignUpNow' | translate }}</a></h6>
               </div>
-              
             </div>
+
+            <div *ngIf="isError" class="alert alert-danger alert-dismissible fade show" role="alert">
+              <strong>{{ message?.title }}: </strong>{{ message?.content }}
+              <button type="button" (click)="cancel()" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div *ngIf="isSuccess" class="alert alert-success alert-dismissible fade show" role="alert">
+              <strong>{{ message?.title }}: </strong>{{ message?.content }}
+              <button type="button" (click)="cancel()" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+
             <div class="divider row"></div>
             <div>
               <form [formGroup]="loginForm" (submit)="login()">
@@ -107,8 +120,21 @@
                   <div class="ml-auto"><a href="javascript:void(0);"
                       (click)="goTo('/public/forgot-password')"
                       class="btn-lg btn btn-link">{{ 'Login.RecoverPassword' | translate }}</a>
-                    <input type="submit" class="btn btn-primary btn-lg"
-                      value="{{ 'Login.LoginToMySpace' | translate }}" />
+                  </div>
+                  <div class="ml-auto" style="width: 45%;">              
+                    <button [disabled]="isLoading"
+                      class="btn-wide btn-shadow btn-hover-shine btn-pill btn-primary btn-lg"
+                      style="width: 100%; justify-content: center; align-items: center; flex: 1;">
+                      <p *ngIf="!isLoading" style="font-size: medium; padding: 0px; margin: 5px;">
+                        {{ 'Login.LoginToMySpace' | translate }} </p>
+                      <div *ngIf="isLoading" style="padding: 15px; margin-left: 50%;">
+                          <div class="ball-scale-multiple">
+                              <div style="background-color: white;"></div>
+                              <div style="background-color: white;"></div>
+                              <div style="background-color: white;"></div>
+                          </div>
+                      </div>
+                    </button>
                   </div>
                 </div>
               </form>
