--- a/src/app/private/containers/visitor/containers/index/left-side/left-side.component.html
+++ b/src/app/private/containers/visitor/containers/index/left-side/left-side.component.html
@@ -34,19 +34,65 @@
         <div class="app-sidebar__inner">
             <ul class="vertical-nav-menu metismenu">
                 <li class="app-sidebar__heading">Menu</li>
-                <li>
-                    <a href="javascript:void(0);" (click)="compute0()"
-                        class="{{ activeMenu.menu8 == 1 ? 'mm-active': ''}}">
-                        <i class="metismenu-icon">
-                        </i>Visualiser mes documents
+                <li class="mm-active">
+                    <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.dossiers')">
+                        <i class="metismenu-icon pe-7s-rocket"></i>
+                        Mes dossiers
+                        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                     </a>
+                    <ul class="dossiers mm-collapse">
+                        <li>
+                            <a href="javascript:void(0);" (click)="activeMenu.menu0=5;goTo('/documents/track-documents')"
+                                class="{{ activeMenu.menu0 == 5 ? 'mm-active': ''}}">
+                                <i class="metismenu-icon">
+                                </i>Suivre l'evolution
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0);" (click)="activeMenu.menu0=2;goTo('/documents/accepted-documents')"
+                                class="{{ activeMenu.menu0 == 2 ? 'mm-active': ''}}">
+                                <i class="metismenu-icon">
+                                </i>Dossiers en traitement
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0);" (click)="activeMenu.menu0=1;goTo('/documents/pending-documents')"
+                                class="{{ activeMenu.menu0 == 1 ? 'mm-active': ''}}">
+                                <i class="metismenu-icon">
+                                </i>Dossiers en attente
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0);" (click)="activeMenu.menu0=3;goTo('/documents/rejected-documents')"
+                                class="{{ activeMenu.menu0 == 3 ? 'mm-active': ''}}">
+                                <i class="metismenu-icon">
+                                </i>Dossiers rejetes
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0);" (click)="activeMenu.menu0=4;goTo('/documents/archived-documents')"
+                                class="{{ activeMenu.menu0 == 4 ? 'mm-active': ''}}">
+                                <i class="metismenu-icon">
+                                </i>Dossier archives
+                            </a>
+                        </li>
+                    </ul>
                 </li>
-                <li>
-                    <a href="javascript:void(0);" (click)="compute1()"
-                        class="{{ activeMenu.menu8 == 1 ? 'mm-active': ''}}">
-                        <i class="metismenu-icon">
-                        </i>Mettre a jour mon profil
+                <li class="mm-active">
+                    <a href="javascript:void(0);" aria-expanded="false" (click)="showChildren('.profil')">
+                        <i class="metismenu-icon pe-7s-rocket"></i>
+                        Profil
+                        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                     </a>
+                    <ul class="profil mm-collapse">
+                        <li>
+                            <a href="javascript:void(0);" (click)="activeMenu.menu1=1;goTo('/profil/modify-my-informations')"
+                                class="{{ activeMenu.menu1 == 1 ? 'mm-active': ''}}">
+                                <i class="metismenu-icon">
+                                </i>Modifier mes infos
+                            </a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
