--- a/src/app/private/containers/visitor/containers/index/nav-bar/nav-bar.component.html
+++ b/src/app/private/containers/visitor/containers/index/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <div class="app-header header-shadow">
     <div class="app-header__logo">
-        <div class="logo-src"></div>
+        <div class="logo-src" (click)="gotToHome()" style="cursor: pointer;"></div>
         <div class="header__pane ml-auto">
             <div>
                 <button type="button" (click)="changeState()" id="close-side-bar-perso" class="hamburger close-sidebar-btn hamburger--elastic"
